--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.2",
+    "framer-motion": "^11.11.11",
     "hono": "^4.6.5",
     "json-server": "1.0.0-beta.2",
     "lucide-react": "^0.436.0",
