--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.4.1",
-    "@neondatabase/serverless": "^0.10.1",
-    "@tanstack/react-query": "^5.52.2",
-    "@tanstack/react-query-devtools": "^5.52.2",
-    "class-variance-authority": "^0.7.0",
+    "@hono/zod-validator": "^0.4.2",
+    "@neondatabase/serverless": "^0.10.4",
+    "@tanstack/react-query": "^5.62.16",
+    "@tanstack/react-query-devtools": "^5.62.16",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.35.2",
-    "framer-motion": "^11.11.11",
-    "hono": "^4.6.5",
-    "json-server": "1.0.0-beta.2",
-    "lucide-react": "^0.436.0",
-    "next": "15.0.1-canary.3",
-    "react": "19.0.0-rc-45804af1-20241021",
-    "react-dom": "19.0.0-rc-45804af1-20241021",
-    "react-intersection-observer": "^9.13.0",
-    "tailwind-merge": "^2.5.2",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
+    "drizzle-zod": "^0.6.1",
+    "framer-motion": "^11.16.0",
+    "hono": "^4.6.16",
+    "json-server": "1.0.0-beta.3",
+    "lucide-react": "^0.469.0",
+    "next": "15.1.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-intersection-observer": "^9.14.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "drizzle-kit": "^0.26.2",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.1",
-    "postcss": "^8",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.1",
-    "typescript": "^5"
+    "@types/node": "^22.10.5",
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2",
+    "drizzle-kit": "^0.30.1",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.3",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
